update docs on User Controller
